Feature/time logic (#64)
* change of time-logic

* 22pm -> sleep time

* locking and advancing game logic

* fix bug